--- a/src/宏任务与微任务.md
+++ b/src/宏任务与微任务.md
@@ -1,2 +1,37 @@
 #### 原理图
 ![宏任务微任务.png](https://i.loli.net/2020/11/15/z74fBDVoMAUNGmq.png)
+
+#### 说明
+- JS 中用来存储待执行回调函数的队列包含2个不同特定的队列
+- 宏队列：
+  - 用来保存待执行的宏任务(回调)，比如：定时器回调/DOM事件回调/Ajax回调
+- 微队列：
+  - 用来保存待执行的微任务(回调)，比如：Promise的回调/MutationObserver的回调
+- JS执行时会区别这2个队列
+  - 首先必须先执行所有的初始化同步任务代码
+  - 每次准备取出第一个宏任务执行前，都要将所有的微任务一个一个取出来执行
+  
+```javascript
+setTimeout(() => {
+  console.log('settimeout cb1', 1)
+  Promise.resolve(3).then(
+    value => {
+      console.log('resolve cb3', value)
+    }
+  )
+})
+setTimeout(() => {
+  console.log('settimeout cb2', 2) 
+})
+Promise.resolve(1).then(
+  value => {
+    console.log('resolve cb1', value)
+  }
+)
+Promise.resolve(2).then(
+  value => {
+    console.log('resolve cb2', value)
+  }
+)
+```
+![截屏2020-11-15 下午4.32.27.png](https://i.loli.net/2020/11/15/RbDdPehYOyugHJX.png)
